--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
             <section>
                 <h3>Sobre mim</h3>
                 <p>
-                   Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa doloremque, adipisci at atque ut natus veniam, earum deserunt perspiciatis, a sed debitis ab vitae fugit pariatur quod illum consequatur quaerat.
+                  Gabriel é um menino legal, mora em Limeira-SP, tem 17 anos, está cursando a segunda série do ensino médio. <br>Possui o seu sonho que todos um dia possam realizar os seus sonhos realizando com honestidade e  <br>todos sejam felizes.
                 </p>
             </section>
             <section>
                 <h3>Formação</h3>
                 <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit, error tempora assumenda, atque id excepturi suscipit voluptatum soluta maxime nobis rem, voluptates eveniet laborum consectetur optio dignissimos! Earum, consequuntur iure.
+                    Sua formmação ainda está em andamento, seguindo o ensino médio na escola Arlindo Silvestre em Limeira-SP, <br>junto com o ensino médio está cursando também o técnico em Desenvolvimento de Sistema e curso Informatica <br>Administrativa.
                 </p>
             </section>
         </div>
