--- a/projetos.html
+++ b/projetos.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Silva</title>
     <link rel="stylesheet" href="assents/projeto.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 </head>
 <body>
-    <header>
         <nav>
             <ul class="links">
                 <li>
@@ -22,7 +21,7 @@
                 </li>
             </ul>
         </nav>
-    </header>
+        
     <div class="esp">
         <!--es-->
     </div>
