--- a/contato.html
+++ b/contato.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Silva</title>
     <link rel="stylesheet" href="assents/contato.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 </head>
 <body>
     <section>
         <h2>Contato</h2>
-        <form action="" method="post">
+        <form action="http://127.0.0.1:3000/obg.html" method="post">
+            <input type="hidden" name="accessKey" value="5e411989-59b4-450b-8737-0feb15eee58a">
             <label>Nome</label>
             <input type="text" name="name" placeholder="DIGITE SEU NOME" autocomplete="off" required>
             <label>Email</label>
             <input type="email" name="email" placeholder="DIGITE SEU EMAIL" autocomplete="off" required>
             <label>Mensagem</label>
             <textarea name="message" cols="30" rows="10" placeholder="DIGITE SUA MENSAGEM" required></textarea>
-            <button type="submit">Enviar</button>
-
-            <input type="hidden" name="accessKey" value="042be0d3-84fa-4ae8-aaed-2434cda72cac">
-            <input type="hidden" name="redirecto" value="http://127.0.0.1:3000/contato.html">
+            
+            <input type="hidden" name="replyTo" value="gabrielsilva125023a@gmail.com">
+            <input type="hidden" name="redirectTo" value="http://127.0.0.1:3000/obg.html">
+            <button type="submit" value="submit">Enviar</button>
+            
         </form>
     </section>
 </body>
