--- a/contato.html
+++ b/contato.html
@@ -10,7 +10,7 @@
 <body>
     <section>
         <h2>Contato</h2>
-        <form action="http://127.0.0.1:3000/obg.html" method="post">
+        <form action="obg.html" method="post">
             <input type="hidden" name="accessKey" value="5e411989-59b4-450b-8737-0feb15eee58a">
             <label>Nome</label>
             <input type="text" name="name" placeholder="DIGITE SEU NOME" autocomplete="off" required>
