--- a/contato.html
+++ b/contato.html
@@ -21,7 +21,7 @@
             
             <input type="hidden" name="replyTo" value="gabrielsilva125023a@gmail.com">
             <input type="hidden" name="redirectTo" value="http://127.0.0.1:3000/obg.html">
-            <button type="submit" value="submit">Enviar</button>
+            <button type="submit">Enviar</button>
             
         </form>
     </section>
