--- a/contato.html
+++ b/contato.html
@@ -10,17 +10,13 @@
 <body>
     <section>
         <h2>Contato</h2>
-        <form action="obg.html" method="post">
-            <input type="hidden" name="accessKey" value="5e411989-59b4-450b-8737-0feb15eee58a">
+        <form action="obg.html">
             <label>Nome</label>
             <input type="text" name="name" placeholder="DIGITE SEU NOME" autocomplete="off" required>
             <label>Email</label>
             <input type="email" name="email" placeholder="DIGITE SEU EMAIL" autocomplete="off" required>
             <label>Mensagem</label>
             <textarea name="message" cols="30" rows="10" placeholder="DIGITE SUA MENSAGEM" required></textarea>
-            
-            <input type="hidden" name="replyTo" value="gabrielsilva125023a@gmail.com">
-            <input type="hidden" name="redirectTo" value="http://127.0.0.1:3000/obg.html">
             <button type="submit">Enviar</button>
             
         </form>
