--- a/projetos.html
+++ b/projetos.html
@@ -28,28 +28,28 @@
 
     <div class="cards">
         <div class="card">
-            <img src="img/projeto1.webp">
+            <img src="img/relógio.png">
             <h2>Projeto 1</h2>
             <p>Descrição</p>
-            <button type="submit">Visitar</button>
+            <button type="submit"><a href="https://gabriel10silva.github.io/rel-gio/" target="_blank" >Visitar</a></button>
         </div>
         <div class="card">
-            <img src="img/projeto1.webp">
+            <img src="img/site.png">
             <h2>Projeto 2</h2>
             <p>Descrição</p>
-            <button type="submit">Visitar</button>
+            <button type="submit"><a href="https://github.com/gabriel10silva/HealthWatch.git" target="_blank">Visitar</a></button>
         </div>
         <div class="card">
             <img src="img/projeto1.webp">
             <h2>Projeto 3</h2>
             <p>Descrição</p>
-            <button type="submit">Visitar</button>
+            <button type="submit"><a href="#" target="_blank">Visitar</a></button>
         </div>
         <div class="card">
             <img src="img/projeto1.webp">
             <h2>Projeto 4</h2>
             <p>Descrição</p>
-            <button type="submit">Visitar</button>
+            <button type="submit"><a href="#" target="_blank">Visitar</a></button>
         </div>
     </div>
 
